--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - ./mysql:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
       - ./dataset:/var/lib/mysql-files
       - ./scripts:/docker-entrypoint-initdb.d
     command: --local_infile=1
@@ -18,57 +18,60 @@ services:
       - my-network
   
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.4.0
+    image: quay.io/debezium/zookeeper:3.0
     hostname: zookeeper
     container_name: zookeeper
     ports:
       - 2181:2181
-    env_file:
-      - env
+      - 2888:2888
+      - 3888:3888
+    # env_file:
+    #   - env
     networks:
       - my-network
 
-  broker:
-    image: confluentinc/cp-server:7.4.0
-    hostname: broker
-    container_name: broker
+  kafka:
+    image: quay.io/debezium/kafka:3.0
+    hostname: kafka
+    container_name: kafka
     depends_on:
       - zookeeper
     ports:
       - 9092:9092
-      - 9101:9101
     env_file:
       - env
-    networks:
-      - my-network
-
-  control-center:
-    image: confluentinc/cp-enterprise-control-center:7.4.0
-    hostname: control-center
-    container_name: control-center
-    depends_on:
-      - broker
-    env_file:
-      - env
-    ports:
-      - 9021:9021
     networks:
       - my-network
 
   debezium:
-    image: debezium/connect:1.9
+    image: quay.io/debezium/connect:3.0
     container_name: debezium
     depends_on:
-      - broker
+      - kafka
+      - mysql
     ports:
       - 8083:8083
     env_file:
       - env
-    volumes:
-      - ./kafka-connect:/kafka-connect
+    # volumes:
+    #   - ./kafka-connect:/kafka/connect
     networks:
       - my-network
 
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    depends_on:
+      - kafka
+    ports:
+      - 8080:8080
+    env_file:
+      - env
+    networks:
+      - my-network
+
+volumes:
+  mysql_data:
 
 networks:
   my-network:
