--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: mysql
     restart: always
     env_file:
-      - env
+      - .env
     ports:
       - 3306:3306
     volumes:
@@ -25,8 +25,6 @@ services:
       - 2181:2181
       - 2888:2888
       - 3888:3888
-    # env_file:
-    #   - env
     networks:
       - my-network
 
@@ -39,7 +37,7 @@ services:
     ports:
       - 9092:9092
     env_file:
-      - env
+      - .env
     networks:
       - my-network
 
@@ -52,9 +50,7 @@ services:
     ports:
       - 8083:8083
     env_file:
-      - env
-    # volumes:
-    #   - ./kafka-connect:/kafka/connect
+      - .env
     networks:
       - my-network
 
@@ -64,14 +60,60 @@ services:
     depends_on:
       - kafka
     ports:
-      - 8080:8080
+      - 9089:8080
     env_file:
-      - env
+      - .env
+    networks:
+      - my-network
+
+  minio:
+    image: quay.io/minio/minio
+    container_name: minio
+    ports:
+     - 9000:9000
+     - 9001:9001
+    env_file:
+      - .env
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+    networks:
+      - my-network
+
+  spark:
+    image: docker.io/bitnami/spark:3.3
+    container_name: spark
+    env_file:
+      - envs/spark-master.env
+    ports:
+      - 8080:8080
+    volumes:
+      - ./spark:/app
+      # - ./spark/jars:/opt/bitnami/spark/jars/custom-libs
+    depends_on:
+      - kafka
+      - minio
+    networks:
+      - my-network
+
+  spark-worker:
+    image: docker.io/bitnami/spark:3.3
+    container_name: spark-worker
+    env_file:
+      - envs/spark-worker.env
+    volumes:
+      - ./spark:/app
+      # - ./spark/jars:/opt/bitnami/spark/jars/custom-libs
+    depends_on:
+      - spark
+    # entrypoint: /app/entrypoint.sh
+    # command: spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.0 /app/stream.py
     networks:
       - my-network
 
 volumes:
   mysql_data:
+  minio_data:
 
 networks:
   my-network:
