--- a/.env
+++ b/.env
@@ -20,8 +20,11 @@ MYSQL_PASSWORD=123
 #KAFKA_JMX_HOSTNAME=localhost
 
 ZOOKEEPER_CONNECT=zookeeper:2181
+# KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
 KAFKA_LISTENERS=PLAINTEXT://kafka:9092
+# ,PLAINTEXT_HOST://localhost:29092
 KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+# ,PLAINTEXT_HOST://localhost:29092
 
 # Debezium
 BOOTSTRAP_SERVERS=kafka:9092
@@ -35,5 +38,7 @@ KAFKA_CLUSTERS_0_NAME=local
 KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
 
 # MinIO
-MINIO_ROOT_USER=root
-MINIO_ROOT_PASSWORD=rootpassword
+MINIO_ROOT_USER=minio
+MINIO_ROOT_PASSWORD=minio123
+MINIO_ACCESS_KEY=minio
+MINIO_SECRET_KEY=minio123
