--- a/spark/spark-defaults.conf
+++ b/spark/spark-defaults.conf
@@ -1,4 +1,5 @@
 spark.jars                                          jars/*
+spark.jars.packages                                 org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.0
 spark.sql.extensions                                io.delta.sql.DeltaSparkSessionExtension
 spark.sql.catalog.spark_catalog                     org.apache.spark.sql.delta.catalog.DeltaCatalog
 spark.hadoop.fs.s3a.endpoint                        http://minio:9000
@@ -7,3 +8,6 @@ spark.hadoop.fs.s3a.secret.key                      minio123
 spark.hadoop.fs.s3a.path.style.access               true
 spark.hadoop.fs.s3a.connection.ssl.enabled          false
 spark.hadoop.fs.s3a.impl                            org.apache.hadoop.fs.s3a.S3AFileSystem
+
+spark.serializer                                    org.apache.spark.serializer.KryoSerializer
+spark.master                                        spark://spark-master:7077
